--- a/style.css
+++ b/style.css
@@ -5,8 +5,14 @@ h4,
 p,
 li {
   font-family: sans-serif;
+  color: #696464;
 }
 
+h1,
+h2,
+h3 {
+  color: #1098ad;
+}
 h1 {
   font-size: 26px;
   text-transform: uppercase;
@@ -59,4 +65,43 @@ footer p {
 
 .related {
   list-style: none;
+}
+
+main-header {
+  background-color: #f7f7f7;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+}
+
+li:first-child {
+  font-weight: bold;
+}
+li:last-child {
+  font-style: italic;
+}
+
+/*Styling links*/
+
+a:link {
+  color: #1098ad;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #777;
+}
+
+a:hover {
+  color: orangered;
+  font-weight: bold;
+  text-decoration: underline orangered;
+}
+
+a:active {
+  background-color: black;
+  font-style: italic;
 }
